--- a/index.html
+++ b/index.html
@@ -222,46 +222,50 @@
         </ul>
       </section>
     </section>
-    <!-- <section id="contact-me">
-      <h3>
-        I'm always interested in hearing about new projects, so if you'd like to
-        chat please get in touch.
-      </h3>
-      <form method="post" action="https://formspree.io/f/xpzewdnr">
-        <label for="name">
-          <input
-            type="text"
-            id="name"
-            name="name"
-            placeholder="Full name"
-            required
-            minlength="3"
-            maxlength="30"
-          />
-        </label>
-        <label for="email">
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Email address"
-            required
-          />
-        </label>
-        <label for="message">
-          <textarea
-            id="message"
-            name="message"
-            maxlength="500"
-            required
-            cols="30"
-            rows="4"
-            placeholder="Enter text here"
-          ></textarea>
-        </label>
-        <button type="submit">Get in touch</button>
-      </form>
+    <section id="contact-me">
+      <div class="container">
+        <h3>
+          I'm always interested in hearing about new projects, so if you'd like
+          to chat please get in touch.
+        </h3>
+        <form method="post" action="https://formspree.io/f/xpzewdnr">
+          <label for="name">
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Full name"
+              required
+              minlength="3"
+              maxlength="30"
+            />
+          </label>
+          <label for="email">
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Email address"
+              required
+            />
+          </label>
+          <label for="message">
+            <textarea
+              id="message"
+              name="message"
+              maxlength="500"
+              required
+              cols="30"
+              rows="4"
+              placeholder="Enter text here"
+            ></textarea>
+          </label>
+          <button type="submit">Get in touch</button>
+        </form>
+      </div>
+    </section>
 
+    <footer>
       <hr />
       <ul class="social-icons">
         <li>
@@ -282,8 +286,6 @@
           <a href=""><img src="./images/medium.png" alt="medium icon" /> </a>
         </li>
       </ul>
-    </section> -->
-
-    <script src="./test.js"></script>
+    </footer>
   </body>
 </html>
