--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="style.css" />
-    <!-- <title>Yousef Badr</title> -->
+    <title>Yousef Badr</title>
   </head>
 
   <body>
@@ -18,9 +18,9 @@
           <div id="menu-icon"></div>
 
           <ul id="nav-el">
-            <li>Portfolio</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="#myworks">Portfolio</a></li>
+            <li><a href="#about-me">About</a></li>
+            <li><a href="#contact-me">Contact</a></li>
             <li id="message"></li>
           </ul>
         </div>
@@ -69,12 +69,11 @@
           id="illustration"
           alt="illustration background"
         />
-        <div id="illustration2">
-          <img
-            src="./images/Illustration-header.png"
-            alt="illustration background"
-          />
-        </div>
+        <img
+          id="illustration2"
+          src="./images/Illustration-header.png"
+          alt="illustration background"
+        />
       </section>
     </header>
     <div id="title" class="container">
@@ -129,6 +128,32 @@
           </ul>
           <button>See Project</button>
         </section>
+        <section class="p2">
+          <h3>Profesional Art Printing Data</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="skills">
+            <li>html</li>
+            <li>css</li>
+            <li>bootstrap</li>
+          </ul>
+          <button>See Project</button>
+        </section>
+        <section class="p2">
+          <h3>Profesional Art Printing Data</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="skills">
+            <li>html</li>
+            <li>css</li>
+            <li>bootstrap</li>
+          </ul>
+          <button>See Project</button>
+        </section>
 
         <section class="p2">
           <h3>Profesional Art Printing Data</h3>
@@ -160,47 +185,56 @@
       </div>
     </section>
     <section id="about-me">
-      <div id="about-header" class="container">
-        <div class="details">
-          <h4>About me</h4>
-          <p>
-            Hello I’m a software developer! I can help you build a product ,
-            feature or website Look through some of my work and experience! If
-            you like what you see and have a project you need coded, don’t
-            hestiate to contact me.
-          </p>
-          <button id="download">Get My Resume</button>
+      <div class="container">
+        <div id="about-header">
+          <div class="details">
+            <h4>About me</h4>
+            <p>
+              Hello I’m a software developer! I can help you build a product ,
+              feature or website Look through some of my work and experience! If
+              you like what you see and have a project you need coded, don’t
+              hestiate to contact me.
+            </p>
+            <button id="download">Get My Resume</button>
+          </div>
+          <div class="illusWrap">
+            <img
+              src="./images/illustration-about-me-mobile.png"
+              id="illustrationSec"
+              alt="project wallpaper"
+            />
+          </div>
         </div>
-        <div class="illusWrap">
+        <div class="illusWrap2">
           <img
-            src="./images/illustration-about-me-mobile.png"
+            src="./images/illustration-about me.png"
             id="illustrationSec"
             alt="project wallpaper"
           />
         </div>
+        <hr />
       </div>
-      <div class="illusWrap2">
-        <img
-          src="./images/illustration-about me.png"
-          id="illustrationSec"
-          alt="project wallpaper"
-        />
-      </div>
-      <hr />
 
       <section class="container">
         <ul id="about-my-self">
           <li class="tools">
-            <h4 class="head heading1">Language</h4>
+            <div class="head">
+              <img src="./images/Rectangle 55.png" alt="rectangle" />
+              <h4>Language</h4>
+            </div>
             <ul>
               <li>Java Script</li>
               <li>Ruby</li>
               <li>Html</li>
+              div
               <li>Css</li>
             </ul>
           </li>
           <li class="tools">
-            <h4 class="head heading2">Framworkes</h4>
+            <div class="head">
+              <img src="./images/Rectangle 56.png" alt="square" />
+              <h4>Frameworks</h4>
+            </div>
             <ul>
               <li>Ruby on Rails</li>
               <li>Bootstrap</li>
@@ -210,7 +244,10 @@
             </ul>
           </li>
           <li class="tools">
-            <h4 class="head heading3">Skills</h4>
+            <div class="head">
+              <img src="./images/Rectangle 57.png" alt="circle" />
+              <h4>Skills</h4>
+            </div>
             <ul>
               <li>GitHub</li>
               <li>Codekit</li>
@@ -229,12 +266,23 @@
           to chat please get in touch.
         </h3>
         <form method="post" action="https://formspree.io/f/xpzewdnr">
-          <label for="name">
+          <label for="fname">
             <input
               type="text"
-              id="name"
+              id="fname"
               name="name"
-              placeholder="Full name"
+              placeholder="First name"
+              required
+              minlength="3"
+              maxlength="30"
+            />
+          </label>
+          <label for="lname">
+            <input
+              type="text"
+              id="lname"
+              name="name"
+              placeholder="Last name"
               required
               minlength="3"
               maxlength="30"
