Add animation for logo and the header's title, checked accessibility

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </li>
           <li>
             <a href="#"
-              ><img src="./images/Icon - Angelist.png" alt="anglist icon" />
+              ><img src="./images/Icon - Angelist.png" alt="angelist icon" />
             </a>
           </li>
           <li>
@@ -325,7 +325,7 @@
           </a>
         </li>
         <li>
-          <a href="#"><img src="./images/angela.png" alt="anglist icon" /> </a>
+          <a href="#"><img src="./images/angela.png" alt="angelist icon" /> </a>
         </li>
         <li>
           <a href="#"><img src="./images/twitter.png" alt="twitter icon" /> </a>
