Style menu navbar

--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
     <header>
       <nav>
         <div class="container">
-          <a href="#" id="logo">Yousef Badr</a>
+          <div>
+            <a href="#" class="logo">Yousef Badr</a>
+          </div>
 
-          <div id="menu-icon"></div>
+          <div class="menu-icon">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
 
-          <ul id="nav-el">
-            <li><a href="#myworks">Portfolio</a></li>
-            <li><a href="#about-me">About</a></li>
-            <li><a href="#contact-me">Contact</a></li>
-            <li id="message"></li>
+          <ul class="nav-menu">
+            <li class="nav-item"><a href="#myworks">Portfolio</a></li>
+            <li class="nav-item"><a href="#about-me">About</a></li>
+            <li class="nav-item"><a href="#contact-me">Contact</a></li>
+            <!-- <li id="message"></li> -->
           </ul>
         </div>
       </nav>
@@ -335,5 +341,7 @@
         </li>
       </ul>
     </footer>
+
+    <script src="./src/script.js"></script>
   </body>
 </html>
