Add project popup and style

--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button>See Project</button>
+          <button class="see-project">See Project</button>
         </div>
       </section>
-      <div class="projects">
+      <div class="projects"></div>
+      <!-- <div class="projects">
         <section class="p2">
           <h3>Profesional Art Printing Data</h3>
           <p>
@@ -116,7 +117,7 @@
             <li>css</li>
             <li>bootstrap</li>
           </ul>
-          <button>See Project</button>
+          <button class="see-project">See Project</button>
         </section>
 
         <section class="p2">
@@ -130,7 +131,7 @@
             <li>css</li>
             <li>bootstrap</li>
           </ul>
-          <button>See Project</button>
+          <button class="see-project">See Project</button>
         </section>
         <section class="p2">
           <h3>Profesional Art Printing Data</h3>
@@ -143,7 +144,7 @@
             <li>css</li>
             <li>bootstrap</li>
           </ul>
-          <button>See Project</button>
+          <button class="see-project">See Project</button>
         </section>
         <section class="p2">
           <h3>Profesional Art Printing Data</h3>
@@ -156,7 +157,7 @@
             <li>css</li>
             <li>bootstrap</li>
           </ul>
-          <button>See Project</button>
+          <button class="see-project">See Project</button>
         </section>
 
         <section class="p2">
@@ -170,7 +171,7 @@
             <li>css</li>
             <li>bootstrap</li>
           </ul>
-          <button>See Project</button>
+          <button class="see-project">See Project</button>
         </section>
 
         <section class="p2">
@@ -184,9 +185,9 @@
             <li>css</li>
             <li>bootstrap</li>
           </ul>
-          <button>See Project</button>
+          <button class="see-project">See Project</button>
         </section>
-      </div>
+      </div> -->
     </section>
     <section id="about-me">
       <div class="container">
@@ -339,7 +340,48 @@
         </li>
       </ul>
     </footer>
-
+    <!-- The Modal -->
+    <div class="modal">
+      <!-- Modal content -->
+      <div class="modal-content container">
+        <div class="head">
+          <h4>Multi Post Stories</h4>
+          <span class="close">&times;</span>
+        </div>
+        <ul class="skills">
+          <li>html</li>
+          <li>Bootstrap</li>
+          <li>Ruby on rails</li>
+        </ul>
+        <div class="content-wrapper">
+          <div class="imgWrapper">
+            <img src="./images/pop-p1-img2.png" alt="" />
+          </div>
+          <div class="details">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it 1960s with the releaLorem Ipsum is simply
+              dummy text of the printing and typesetting industry. Lorem Ipsum
+              has been the industry's standard dummy text ever since the 1500s,
+              when an unknown printer took a galley of type and scrambled it
+              1960s with the releax map lapora verita.
+            </p>
+            <div class="btnWrapper">
+              <button class="p-button">
+                See Live
+                <img src="./images/Icon - Export.png" alt="See Live " />
+              </button>
+              <button class="p-button">
+                See Source
+                <img src="./images/github3.png" alt="See Source " />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./src/script.js"></script>
   </body>
 </html>
