Fix the linters and Add image, project links

--- a/index.html
+++ b/index.html
@@ -105,89 +105,6 @@
         </div>
       </section>
       <div class="projects"></div>
-      <!-- <div class="projects">
-        <section class="p2">
-          <h3>Profesional Art Printing Data</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="skills">
-            <li>html</li>
-            <li>css</li>
-            <li>bootstrap</li>
-          </ul>
-          <button class="see-project">See Project</button>
-        </section>
-
-        <section class="p2">
-          <h3>Profesional Art Printing Data</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="skills">
-            <li>html</li>
-            <li>css</li>
-            <li>bootstrap</li>
-          </ul>
-          <button class="see-project">See Project</button>
-        </section>
-        <section class="p2">
-          <h3>Profesional Art Printing Data</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="skills">
-            <li>html</li>
-            <li>css</li>
-            <li>bootstrap</li>
-          </ul>
-          <button class="see-project">See Project</button>
-        </section>
-        <section class="p2">
-          <h3>Profesional Art Printing Data</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="skills">
-            <li>html</li>
-            <li>css</li>
-            <li>bootstrap</li>
-          </ul>
-          <button class="see-project">See Project</button>
-        </section>
-
-        <section class="p2">
-          <h3>Profesional Art Printing Data</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="skills">
-            <li>html</li>
-            <li>css</li>
-            <li>bootstrap</li>
-          </ul>
-          <button class="see-project">See Project</button>
-        </section>
-
-        <section class="p2">
-          <h3>Profesional Art Printing Data</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="skills">
-            <li>html</li>
-            <li>css</li>
-            <li>bootstrap</li>
-          </ul>
-          <button class="see-project">See Project</button>
-        </section>
-      </div> -->
     </section>
     <section id="about-me">
       <div class="container">
@@ -345,7 +262,7 @@
       <!-- Modal content -->
       <div class="modal-content container">
         <div class="head">
-          <h4>Multi Post Stories</h4>
+          <h5>Multi Post Stories</h5>
           <span class="close">&times;</span>
         </div>
         <ul class="skills">
@@ -358,7 +275,7 @@
             <img src="./images/pop-p1-img2.png" alt="" />
           </div>
           <div class="details">
-            <p>
+            <p class="para">
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
               ever since the 1500s, when an unknown printer took a galley of
