Fix the header image and enhamcemnet the modal code Add function to render the modal content

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
           id="illustration"
           alt="illustration background"
         />
-        <img
+        <!-- <img
           id="illustration2"
           src="./images/Illustration-header.png"
           alt="illustration background"
-        />
+        /> -->
       </section>
     </header>
     <div id="title" class="container">
@@ -270,35 +270,34 @@
           <li>Bootstrap</li>
           <li>Ruby on rails</li>
         </ul>
-        <div class="content-wrapper">
-          <div class="imgWrapper">
+        <div class="content">
+          <div class="modal-img">
             <img src="./images/pop-p1-img2.png" alt="" />
           </div>
-          <div class="details">
+          <div class="modal-details">
             <p class="para">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it 1960s with the releaLorem Ipsum is simply
-              dummy text of the printing and typesetting industry. Lorem Ipsum
-              has been the industry's standard dummy text ever since the 1500s,
-              when an unknown printer took a galley of type and scrambled it
-              1960s with the releax map lapora verita.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat
+              ea inventore, ullam adipisci deserunt saepe omnis beatae ducimus
+              magni veritatis quibusdam modi soluta aut, harum mollitia quo,
+              quos facilis distinctio! Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Quisquam id assumenda unde reiciendis beatae eum
+              laborum fugit asperiores corporis? Accusantium commodi animi
             </p>
             <div class="btnWrapper">
-              <button class="p-button">
+              <a href="" class="p-button">
                 See Live
                 <img src="./images/Icon - Export.png" alt="See Live " />
-              </button>
-              <button class="p-button">
+              </a>
+              <a href="" class="p-button">
                 See Source
                 <img src="./images/github3.png" alt="See Source " />
-              </button>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="./src/functions.js"></script>
     <script src="./src/script.js"></script>
   </body>
 </html>
